--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 10 08:37:13 CEST 2017
-ndk.dir=/Users/marcelklammer/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/marcelklammer/Library/Android/sdk
+#Wed Nov 29 16:25:06 JST 2017
+ndk.dir=/Users/ryan/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/ryan/Library/Android/sdk
